--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
-    "build": "cd client && npm install && npm run build"
+   "build": "npm --prefix client run build"
+
   },
   "keywords": [],
   "author": "",
