--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
-   "build": "npm --prefix client run build"
+    "dev": "nodemon server/index.js"
+   
 
   },
   "keywords": [],
